@@ -116,8 +116,11 @@ class CDbFixtureManager extends CApplicationComponent
 			require($initFile);
 		else
 		{
-			foreach($this->getFixtures() as $fixture)
-				$this->loadFixture($fixture);
+			foreach($this->getFixtures() as $tableName=>$fixturePath)
+			{
+				$this->resetTable($tableName);
+				$this->loadFixture($tableName);
+			}
 		}
 		$this->checkIntegrity(true);
 	}
@@ -188,9 +191,10 @@ class CDbFixtureManager extends CApplicationComponent
 	}
 
 	/**
-	 * Returns the names of the tables that have fixture data.
-	 * All fixtures are assumed to be located under {@link basePath}.
-	 * @return array the names of the tables that have fixture data
+	 * Returns the information of the available fixtures.
+	 * This method will search for all PHP files under {@link basePath}.
+	 * If a file's name is the same as a table name, it is considered to be the fixture data for that table.
+	 * @return array the information of the available fixtures (table name => fixture file)
 	 */
 	public function getFixtures()
 	{
