@@ -6,6 +6,7 @@ Version 1.1.3 to be released
 ----------------------------
 - Bug #856: Logout doesn't work when CWebUser::identityCookie is configured and allowAutoLogin is set true (Qiang)
 - Bug #1027: CButtonColumn->buttons is ignored (Sam Dark)
+- Bug #1046: Fixed the bug that CDbFixtureManager did not properly initialize the fixture data (Qiang)
 - Bug #1142: Fixed the character encoding in polish translations (pawel.drylo)
 - Bug #1149: CHtml::resolveName() does not work with multiple dimensional attributes (Qiang)
 - Bug #1176: CVarDumper may omit some backslashes in the syntax-highlighted display (Qiang)
